Nguyen Quoc Thong nop bai tap 8 cau truc dieu kien

--- a/ss8_cautrucdieukien1/dk1_b4.html
+++ b/ss8_cautrucdieukien1/dk1_b4.html
@@ -15,9 +15,9 @@
     <script>
 
      function add() {
-         a = document.getElementById("number1").value;
-         b = document.getElementById("number2").value;
-         c = document.getElementById("number3").value;
+         a = +document.getElementById("number1").value;
+         b = +document.getElementById("number2").value;
+         c = +document.getElementById("number3").value;
 
 
 
