--- a/ss8_cautrucdieukien1/cscn.html
+++ b/ss8_cautrucdieukien1/cscn.html
@@ -16,7 +16,7 @@
     function add() {
         weight = +document.getElementById("weight").value;
         height = +document.getElementById("height").value;
-        bmi =  weight / ( height ^ 2 )
+        bmi =   weight / ( height * height )
 
 
         if (bmi < 18) {
@@ -24,12 +24,12 @@
 
         } else if (bmi < 25.0){
             alert("Normal");
-    } else if (bmi < 30.0) {
+        } else if (bmi < 30.0) {
             alert("Overweight");
-    } else{
+        } else{
         alert("Obese");
     }
-        document.getElementById("result").innerText = bmi;
+        document.getElementById("result").innerText = "BMI : " + bmi;
     }
 </script>
 </body>
