--- a/ss8_cautrucdieukien1/dk1_b3.html
+++ b/ss8_cautrucdieukien1/dk1_b3.html
@@ -13,11 +13,11 @@
             function add() {
                 a = document.getElementById("number").value;
                 if (a > 0) {
-                    alert("Đây là số nguyên dương")
+                    alert("Đây là số nguyên dương lớn hơn 0")
                     document.getElementById("result").innerText = "Số " + a + " là số nguyên dương lớn hơn 0";
                 }else if (a < 0) {
-                    alert("Đây là số nguyên âm")
-                    document.getElementById("result").innerText = "Số " + a + " là số nguyên âm nhỏ hơn "
+                    alert("Đây là số nguyên âm nhỏ hơn 0")
+                    document.getElementById("result").innerText = "Số " + a + " là số nguyên âm nhỏ hơn 0"
                 } else {
                     alert("Bạn vừa nhập vào số 0")
                     document.getElementById("result").innerText = "Bạn vừa nhập vào số 0";
