--- a/ss8_cautrucdieukien1/dk1_b5.html
+++ b/ss8_cautrucdieukien1/dk1_b5.html
@@ -10,26 +10,30 @@
 <h4>Điểm Cuối Kì : <input id="tck"></h4>
 
 <button onclick="add()">Diem Tong ket</button>
-<p id="result"></p>
+<p>Học lực : <span id="result"><span> </p>
 
 <script>
     function add(){
-    bkt = +document.getElementById("bkt").value;
-    tgk = +document.getElementById("tgk").value;
-    tck = +document.getElementById("tck").value;
+        bkt = +document.getElementById("bkt").value;
+        tgk = +document.getElementById("tgk").value;
+        tck = +document.getElementById("tck").value;
 
 
-    avg = (bkt + tgk * 2 + tck * 3) / 6
+        avg = (bkt + tgk * 2 + tck * 3) / 6
 
-    if (avg >= 9){
-        alert("Xuất sắc")
-    } else if (avg >=8){
-        alert("Khá")
-    }else if (avg >= 5){
-        alert("Trung bình")
-    }else {
-        alert("Yếu")
-    }
+        if (avg >= 9){
+            alert("Xuất sắc")
+            document.getElementById("result").innerText = "Xuất sắc";
+        } else if (avg >=8){
+            alert("Khá")
+            document.getElementById("result").innerText = "Khá";
+        }else if (avg >= 5){
+            alert("Trung bình")
+            document.getElementById("result").innerText = "Trung bình";
+        }else {
+            alert("Yếu")
+            document.getElementById("result").innerText = "Yếu";
+        }
 
     }
 
