Nguyen Quoc Thong nop bai tap cautrucvonglap

--- a/ss9_cautrucvonglap1/vl1_b1.html
+++ b/ss9_cautrucvonglap1/vl1_b1.html
@@ -9,10 +9,13 @@
 <script>
 
 
-    for (let i = 0;i<100;i++){
-        document.write(+i + " ")
+    for (let i = 0; i <=100 ; i++){
+        if (i == 99) {
+            document.write(i + "  </br> Hoàn Thành </br>")
+        }else {
+            document.write(i + "</br>")
+        }
     }
-
 </script>
 
 </body>
