--- a/ss9_cautrucvonglap1/vl1_b3.html
+++ b/ss9_cautrucvonglap1/vl1_b3.html
@@ -7,16 +7,19 @@
 <body>
 <diV id="fibonacci"></diV>
 <script>
-    var output=document.getElementById("fibonacci");
-    var a=0;
-    var b=1;
-    var n=parseInt(prompt("Nhập số lượng số fibonacci muốn hiển thị:"));
-    for(var i=0;i<n;i++){
-        var c=a+b;
-        output.innerHTML+=c+",";
-        a=b;
-        b=c;
-    }
+
+
+    let a = 0;
+    let b = 1;
+    let fibo;
+
+    for(let i = 2; i <= 20; i++){
+        document.write(a + "</br>")
+        let fibo = a +b ;
+        a = b ;
+        b = fibo
+    }document.write(a)
+
 </script>
 </body>
 </html>
