--- a/ss9_cautrucvonglap1/vl_b5.html
+++ b/ss9_cautrucvonglap1/vl_b5.html
@@ -2,30 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>bai 01</title>
 </head>
 <body>
-
-    <script>
-        document.write("Day fibo : </br>")
-        let n1 = 0;
-        let n2 = 1;
-        let fibo ;
-        let sum =0 ;
+<p>Result: <span id="fibo"></span></p>
+<script>
 
 
+    let a = 0;
+    let b = 1;
+    let fibo;
+    let sum = 0;
 
-        for (let i = 1 ; i <= 20 ; i++) {
-            document.write(n1 + " ");
-            fibo = n1 + n2 ;
-            n1 = n2 ;
-            n2 = fibo;
-            sum = sum + fibo ;
+    for(let i = 2; i <= 20; i++){
+        document.write(a + "</br>")
+        let fibo = a +b ;
+        a = b ;
+        b = fibo
 
-        }  document.write("</br>Tong day fibo : " +fibo)
+        sum = sum + a;
+    }document.write(a)
+    document.write("</br> Tổng 20 số đầu tiên trong dãy fibonacci là " + sum)
 
-    </script>
+    document.getElementById("result").innerText = sum;
 
+</script>
 </body>
 </html>
-
