--- a/ss9_cautrucvonglap1/vl_b5.html
+++ b/ss9_cautrucvonglap1/vl_b5.html
@@ -16,7 +16,7 @@
 
     for(let i = 2; i <= 20; i++){
         document.write(a + "</br>")
-        let fibo = a +b ;
+        fibo = a +b ;
         a = b ;
         b = fibo
 
