Nguyen Quoc Thong nop bai tap cautrucvonglap

--- a/ss9_cautrucvonglap1/vl_b6.html
+++ b/ss9_cautrucvonglap1/vl_b6.html
@@ -12,9 +12,11 @@
                 a = 7 * i ;
                 sum = sum + a;
                 }
-            document.write(sum)
+            document.write("Tổng 30 số chia hết cho 7 đầu tiên trong các số tự nhiên :  "+sum)
 
         </script>
 
 </body>
 </html>
+
+
