Nguyen Quoc Thong nop bai tap cautrucvonglap

--- a/ss9_cautrucvonglap1/vl1_b3.html
+++ b/ss9_cautrucvonglap1/vl1_b3.html
@@ -12,13 +12,13 @@
     let a = 0;
     let b = 1;
     let fibo;
-    for(let i = 1; i  20; i++){
+    for(let i = 1; i <= 20; i++){
         document.write(a + "</br>")
         fibo = a +b ;
         a = b ;
         b = fibo
 
-    }document.write(a)
+    }
 
 
 </script>
