Nguyen Quoc Thong nop bai tap cautrucvonglap

--- a/ss9_cautrucvonglap2/vl2_b2.html
+++ b/ss9_cautrucvonglap2/vl2_b2.html
@@ -8,13 +8,13 @@
 
 <script>
 
-    let n = +prompt("Nhap so :")
+    let n = +prompt("Nhập một số nguyên  :")
     let sum = 1;
 
     for (let i = 1; i <= n; i++) {
         sum = sum * i;
     }
-    document.write(sum)
+    document.write("Giai thừa của số " + n + " là " + sum);
 
 </script>
 
