--- a/ss8_cautrucdieukien2/dk2_b7.html
+++ b/ss8_cautrucdieukien2/dk2_b7.html
@@ -2,49 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ptb2</title>
 </head>
 <body>
-    <input placeholder="nhập a" id="a">
-    <input placeholder="nhập b" id="b">
-    <input placeholder="nhap c" id="c">
-    <button onclick="add()">Tinh</button>
-    <p> Result: <span id="result"></span></p>
+<script>
+        let a = +prompt("Nhap a:")
+        let b = +prompt("Nhap b:")
+        let c = +prompt("Nhap c:")
+        let x = - b / (2*a);
+        delta = (b * b) - 4 * a * c;
+        let x1 = (-b + Math.sqrt(delta)) / 2 * a;
+        let x2 = (-b - Math.sqrt(delta)) /2 * a
+        if (a == 0) {
+            document.write("Hệ số bậc cao nhất phải khác 0");
+        }else {
 
-    <script>
-
-        function add() {
-            a = document.getElementById("a").value;
-            b = document.getElementById("b").value;
-            c = document.getElementById("c").value;
-            let delta = b * b - 4 * a * c;
-
-            if (a == 0) {
-                let x = -(c / b);
-                if (b == 0) {
-                    if (c == 0) {
-                        alert("Phuong trinh vo so nghiem")
-                    } else {
-                        alert("Phuong trinh vo nghiem")
-                    }
-                } else {
-                    alert("nghiem x" + x);
-                }
-            }else{
-                 if (delta<0){
-                alert("phuong trinh vo nghiem")
-            }else if (delta==0){
-                let x = b / (2*a)
-                alert("Nghiem kep" + x)
-            }else{
-                let x1 = (-b+Math+.abs(delta))/(2*a);
-                let x2 = (-b+Math-.abs(delta))/(2*a);
-                alert("2 nghiem :" +x1 + " " + x2);
+            if (delta < 0){
+                document.write("Phuong trinh vo nghiem")
+            }else if ( delta == 0 ){
+                document.write("Phuong trinh co 1 nghiem la : " +x)
+            }else {
+                document.write("Phuong trinh co nghiem thu nhat la " +x1 + " va nghiem thu hai " +x2)
             }
         }
-            }
 
-
-    </script>
+</script>
 </body>
 </html>
+}
