--- a/ss9_cautrucvonglap1/sinhbangcuuchuong.html
+++ b/ss9_cautrucvonglap1/sinhbangcuuchuong.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<script>
 
+    let x = [1, 3, 5];
+    x[0] = 15;
+    x[3] = 77;
+    console.log(x);
+</script>
 </body>
 </html>
