--- a/ss9_cautrucvonglap2/vl2_b1.html
+++ b/ss9_cautrucvonglap2/vl2_b1.html
@@ -8,17 +8,17 @@
 
 <script>
 
-    let a = 0;
-    let b = 1;
-    let c;
-    let fibo = +prompt("Nhap day fibonacci can in :")
-
-    for (i = 0; i <= fibo; i++) {
-        document.write(a + "</br>")
-        c = a + b;
-        a = b;
-        b = c;
+    let a = +prompt("Nhập dãy fibonacci cần in ")
+    let n1 = 0;
+    let n2 = 1;
+    let n3;
+    for (let i = 1; i <= a; i++) {
+        document.write(n1 + "</br>")
+        n3 = n1 + n2;
+        n1 = n2;
+        n2 = n3;
     }
+
 
 </script>
 
