--- a/ss9_cautrucvonglap1/sinhbangcuuchuong.html
+++ b/ss9_cautrucvonglap1/sinhbangcuuchuong.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bang cuu chuong</title>
 </head>
-<body>
-<script>
 
-    let x = [1, 3, 5];
-    x[0] = 15;
-    x[3] = 77;
-    console.log(x);
-</script>
+        <script>
+
+          document.write("<table border = 1 width =80%>")
+            for (n1 = 1;n1 <= 10; n1 ++){
+                document.write("<tr>")
+                for (n2 = 2; n2 < 10; n2++)
+                    document.write("<td>"+ n2 + " x " + n1 + " = " + (n2 * n1 ));
+                    document.write("</td>")
+                    document.write("</tr>")
+                }
+            document.write("<table>")
+
+        </script>
+
+
 </body>
 </html>
