--- a/ss12_mang/mang1_b1.html
+++ b/ss12_mang/mang1_b1.html
@@ -7,15 +7,26 @@
 <body>
 <script>
 
-    let numbers = [4,10,23,44,55,66,77,33,12,100];
-    let count = 0 ;
+ let number = new Array();
+ let count = 0;
+ let sum = 0;
+ let nhapso = +prompt("Nhập vào số phần tử mảng muốn in : ")
 
-    for(let i = 0 ;i < numbers.length; i++ ){
-        if (numbers[i] >=10 ){
+    for (i = 0 ; i <nhapso;i++){
+        number[i] = +prompt("Nhập vào phần tử Array ["+ i + "]");
+        if (number[i] >= 10){
+
+            document.write("Số >= 10  : "+number[i] + "</br>")
+            sum = sum + number[i];
             count++;
-
         }
-    }document.write("so nguyen lon hon 10 la "+count );
+    }document.write("Các phần tử vừa nhập : "+number + "</br>")
+    document.write("Tổng các số >= 10 là " + sum + "</br>")
+    document.write("có "+ count +" số >=10" + "</br>")
+
+
+
+
 
 </script>
 </body>
