--- a/ss9_cautrucvonglap1/vl_b6.html
+++ b/ss9_cautrucvonglap1/vl_b6.html
@@ -11,6 +11,7 @@
     for (let i = 1; i <= 30; i++) {
         a = 7 * i;
         sum = sum + a;
+        document.write(a+ "</br>")
     }
     document.write("Tổng 30 số chia hết cho 7 đầu tiên trong các số tự nhiên :  " + sum)
 
