--- a/ss12_mang/mang1_b3.html
+++ b/ss12_mang/mang1_b3.html
@@ -23,6 +23,7 @@
             }
 
         }
+        document.write(numbers)
         avg = sum /(numbers.length)
         document.write("So lon nhat la :" +max);
         document.write("trung binh cong la : " +avg)
