--- a/ss12_mang/test.html
+++ b/ss12_mang/test.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<script>
-    let a = new Array();
-    let b;
-    let local = -1
-    let check = false
-    for (let i = 0; i < 10; i++) {
-        a[i] = +prompt("Nhập Arr["+i+"] :")
-    }
-    document.write("Arr["+a+"]<br>")
-    b = +prompt("Nhập số muốn tìm")
-    for (let i = 0; i < 10; i++) {
-        if (a[i]==b){
-            check = true
-            local = i + 1
-        }
-    }
-    if (check){
-        document.write(b+" in Arr["+local+"]")
-    }else {
-        document.write(b+" not in Arr["+a+"]")
-    }
-</script>
-</body>
-</html>
+let arr = new Array(10);
+for (let i = 0; i < arr.length; i++) {
+arr[i] = +prompt("Nhap phan tu Arr[" + i + "] =");
+arr.sort((a,b)=>b-a);
+}document.write("Array sorted:" + arr + "<br>")
