--- a/ss12_mang/mang1_b4.html
+++ b/ss12_mang/mang1_b4.html
@@ -12,7 +12,7 @@
     for(let i = 0 ; i < array.length; i++) {
         array.reverse();
     }
-    document.write("Dao nguoc lai thanh :"+ array.reverse());
+    document.write("Đảo ngược lại là :"+ array.reverse());
 
 
 </script>
