--- a/ss12_mang/mang1_b5.html
+++ b/ss12_mang/mang1_b5.html
@@ -10,9 +10,9 @@
 
     let count = 0;
     let array = Array();
-    let nhapso = +prompt("Nhập số phần tử mảng: ");
+    let nhapSo = +prompt("Nhập số phần tử mảng: ");
 
-    for (let i = 0; i < nhapso; i++) {
+    for (let i = 0; i < nhapSo; i++) {
         array[i] = +prompt("Nhập phần tử Arr[" + i + "] =");
         if (array[i] < 0) {
             count++;
