--- a/ss12_mang/mang1_b6.html
+++ b/ss12_mang/mang1_b6.html
@@ -10,7 +10,7 @@
     let array = Array(10);
     let v;
     let flag = false;
-    let vitri = 0;
+    let viTri = 0;
 
     for (i = 0; i < 10; i++) {
         array[i] = +prompt("Array [" + i + "] =");
@@ -18,15 +18,18 @@
     v = +prompt("Nhap so muon tim");
     for (j = 0; j < 10; j++) {
         if (array[j] == v) {
-            flag == true;
-            vitri = j;
+            flag = true;
+            viTri = j;
+            document.write("Phần tử " + v + " Xuất hiện ở vị trí " + viTri);
+            break;
         }
     }
-    if (flag==true) {
-        document.write("Phan tu " + v + " Xuat hien o vi tri" + vitri)
-    } else {
-        document.write("Phan tu " + v + " KHONG co trong mang [" + array + "]")
+
+
+    if (!flag) {
+        document.write("Phần tử " + v + " KHÔNG có trong mảnh [" + array + "]");
     }
+
 </script>
 </body>
 </html>
