--- a/ss12_mang/mang1_b8.html
+++ b/ss12_mang/mang1_b8.html
@@ -7,11 +7,13 @@
 <body>
 <script>
 
-    let array = new Array(10)
-    for (let i = 0 ; i < array.length; i++){
-        array[i] = +prompt("Array ["+i+"] =")
-        array.sort((a,b)=>b-a)
-    }document.write(array)
+    let array = Array(10);
+    for (let i = 0; i < 10 ; i++){
+        array[i]  = +prompt("Nhap phan tu mang ["+i+"] ")
+        array.sort((a,b) => b - a)
+    }
+    document.write("mang sau khi sap xep thu tu giam dan " + array)
+
 
 </script>
 </body>
