--- a/ss12_mang/test.html
+++ b/ss12_mang/test.html
@@ -1,5 +1,32 @@
-let arr = new Array(10);
-for (let i = 0; i < arr.length; i++) {
-arr[i] = +prompt("Nhap phan tu Arr[" + i + "] =");
-arr.sort((a,b)=>b-a);
-}document.write("Array sorted:" + arr + "<br>")
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>So sánh 2 chuỗi</title>
+</head>
+<body>
+<script>
+    let str1= prompt(" Nhập string 1:");
+    let str2 = prompt("Nhập string 2");
+    if (str1.length != str2.length) {
+        document.write(" Hai chuỗi không bằng nhau.");
+    }
+    else {
+        let flag= false;
+        for (let i = 0; i < str1.length; i++) {
+            if (str1[i]!= str2[i]){
+                flag= false;
+                document.write("Hai chuổi không bằng nhau.");
+                break;
+            } else {
+                flag= true;
+            }
+        }
+        if(flag==true)
+        {
+            document.write("Hai chuổi bằng nhau");
+        }
+    }
+</script>
+</body>
+</html>
