Nguyen Quoc Thong nop bai tap mang

--- a/ss12_mang/ss12_mang2/mang2_b6.html
+++ b/ss12_mang/ss12_mang2/mang2_b6.html
@@ -8,7 +8,7 @@
 <script>
 
     let array = prompt("Nhap mang ky tu");
-    let array2 = array.replace(-, "_")
+    let array2 = array.replace(/-/, "_")
     document.write(array + "</br>");
     document.write(array2)
 
