Nguyen Quoc Thong nop bai tap mang

--- a/ss12_mang/mang1_b8.html
+++ b/ss12_mang/mang1_b8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sắp xếp Mảng</title>
+    <title>sap xep mang</title>
 </head>
 <body>
 <script>
