--- a/ss12_mang/ss12_mang2/mang2_b3.html
+++ b/ss12_mang/ss12_mang2/mang2_b3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Đếm số kí tự số trong mảng</title>
+    <title>dem so ki tu trong mang</title>
 </head>
 <body>
 <script>
