--- a/ss12_mang/ss12_mang2/mang2_b6.html
+++ b/ss12_mang/ss12_mang2/mang2_b6.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Thay thế "-" bằng "_"</title>
+    <title>chuyen doi - sang _</title>
 </head>
 <body>
 <script>
