--- a/ss12_mang/ss12_mang2/mang2_b1.html
+++ b/ss12_mang/ss12_mang2/mang2_b1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mảng 2 chiều</title>
+    <title>mang 2 chieu</title>
 </head>
 <body>
 <script>
