--- a/ss12_mang/ss12_mang2/mang2_b4.html
+++ b/ss12_mang/ss12_mang2/mang2_b4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bài 4</title>
+    <title>dem so tu trong </title>
 </head>
 <body>
 <script>
