Nguyen Quoc Thong nop bai tap mang

--- a/ss12_mang/ss12_mang2/mang2_b3.html
+++ b/ss12_mang/ss12_mang2/mang2_b3.html
@@ -20,7 +20,7 @@
         }
     }
     document.write(array + "</br>")
-    document.write("So ki tu trong mang " + count)
+    document.write("Ki tu so trong mang la :" + count)
 
 </script>
 
