--- a/ss12_mang/mang1_b7.html
+++ b/ss12_mang/mang1_b7.html
@@ -7,25 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-
 <script>
 
-    let array = [1,2,3,4,5,6,7,8,9,10]
-    flag = false;
-    let v = +prompt("Nhập phần tử cần tìm")
-    for (let i = 0; i < array.length ; i++) {
-        if (array[i] == v){
-            array.splice(i,1)
-            flag == true;
-            document.write("Phần tử mảng đã xóa :" + array)
+    let array = new Array(5);
+    let v = +prompt("Nhap so v")
+
+    for (let i = 0; i < 5; i++){
+        array[i] = +prompt("Nhap phan tu array ["+i+"] =");
+    }
+    let flag = false;
+    for (let j = 0 ; j < 5; j++){
+        if (array[j]==v){
+            array.splice(j,1);
+            array.push(0);
+            flag=true;
+            document.write(array+"</br>")
             break;
         }
-
+    }if (!flag){
+        document.write(v + " Khong nam trong mang")
     }
 
-    if(!flag){
-        document.write("Số "+ v + " Không nằm trong mảng")
-    }
 
 
 
