--- a/ss12_mang/test.html
+++ b/ss12_mang/test.html
@@ -2,31 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>So sánh 2 chuỗi</title>
+    <title>start</title>
 </head>
 <body>
 <script>
-    let str1= prompt(" Nhập string 1:");
-    let str2 = prompt("Nhập string 2");
-    if (str1.length != str2.length) {
-        document.write(" Hai chuỗi không bằng nhau.");
-    }
-    else {
-        let flag= false;
-        for (let i = 0; i < str1.length; i++) {
-            if (str1[i]!= str2[i]){
-                flag= false;
-                document.write("Hai chuổi không bằng nhau.");
-                break;
-            } else {
-                flag= true;
-            }
-        }
-        if(flag==true)
-        {
-            document.write("Hai chuổi bằng nhau");
-        }
-    }
+    nhapSo = prompt("Nhap ki tu ")
+    count = 0
+
+    for (let i = 0 ; i <array.length ; i++){
+        count++
+    }document.write(count)
+
 </script>
 </body>
 </html>
