--- a/ss14_ham/songuyento.html
+++ b/ss14_ham/songuyento.html
@@ -7,26 +7,28 @@
 <body>
 <script>
 
-    function isPrime(number){
-        let flag =true;
-        if(number<2){
-            flag=false;
-        }else{
-            for (let i = 0; i <number-1 ; i+=2) {
-                if(number%i===0){
-                    flag=false;
-                    break
+    function isPrime(snt) {
+        let flag = true;
+        if (snt < 2) {
+            flag = false
+        } else {
+            for (let i = 2; i <= Math.sqrt(snt); i++) {
+                if (snt % i === 0) {
+                    flag = false;
+                    break;
                 }
             }
         }
-        if(flag==true){
-            console.log(number+"  là số nguyên tố")
-        }else{
-            console.log(number+"  ko phải số nguyên tố")
+        if (flag == true) {
+            alert(snt +" La so nguyen to")
+        } else {
+            alert(snt + " KHONG phai so nguyen to")
         }
     }
-    let a=prompt()
-    isPrime(a)
+
+    let nhapSo = +prompt("Nhap so")
+    isPrime(nhapSo)
+
 </script>
 </body>
 </html>
