--- a/ss14_ham/ham1_bt2.html
+++ b/ss14_ham/ham1_bt2.html
@@ -13,9 +13,9 @@
         return tangNum;
     }
 
-    let nhapSo = +prompt("Nhap 1 doi so de tang gia tri len 1")
+    let nhapSo = +prompt("Nhập 1 đối số để tăng lên 1 đơn vị")
     let goiNum = numbers(nhapSo)
-    document.write(goiNum)
+    document.write(nhapSo + " Đã tăng lên 1 đơn vị là :" + goiNum)
 </script>
 
 </body>
