--- a/ss14_ham/ham1_bt3.html
+++ b/ss14_ham/ham1_bt3.html
@@ -21,8 +21,8 @@
     document.write(goiHamSoSanh);
 
     //Cach 2
-    let n1 = +prompt("Nhap num1");
-    let n2 = +prompt("Nhap num2");
+    let n1 = +prompt("Nhập num1");
+    let n2 = +prompt("Nhập num2");
     soSanh(n1, n2)
     //let result  = soSanh(n1,n2)
     //  document.write(result)
