--- a/ss14_ham/ss14_ham2/ham2_bt2.html
+++ b/ss14_ham/ss14_ham2/ham2_bt2.html
@@ -10,9 +10,9 @@
 
 
     const pi = 3.14;
-    let r = +prompt("Nhap ban kinh ")
+    let r = +prompt("Nhập bán kính ")
     document.write("Chu vi = " + chuVi(r) + "</br>")
-    document.write("Dien Tich =" + dienTich(r))
+    document.write("Diện tích =" + dienTich(r))
 
     function chuVi(cv) {
         let c = (r * 2) * pi;
