--- a/ss14_ham/ss14_ham2/ham2_bt3.html
+++ b/ss14_ham/ss14_ham2/ham2_bt3.html
@@ -7,8 +7,8 @@
 <body>
 <script>
 
-    let nhapSo = +prompt("Nhap so de tinh giai thua");
-    document.write("giai thua cua " +nhapSo + " =" + tinhGiaithua(nhapSo))
+    let nhapSo = +prompt("Nhập số để tính giai thừa");
+    document.write("Giai thừa của " +nhapSo + " = " + tinhGiaithua(nhapSo))
 
     function tinhGiaithua(n) {
         let giaiThua = 1;
@@ -27,4 +27,3 @@
 </script>
 </body>
 </html>
-
