--- a/ss14_ham/ss14_ham2/ham2_bt7.html
+++ b/ss14_ham/ss14_ham2/ham2_bt7.html
@@ -7,15 +7,15 @@
 <body>
 <script>
     let n;
-    let n1 = +prompt("Nhap so thu nhat")
-    let n2 = +prompt("Nhap so thu hai ");
+    let n1 = +prompt("Nhập số thứ nhất")
+    let n2 = +prompt("Nhấp số thứ ");
     truyenSo(n1,n2)
     function truyenSo(n1,n2) {
         document.write("Khi chua doi: " + n1 +" " +n2 +"</br>")
         n = n1;
         n1 = n2 ;
         n2 = n;
-        document.write("Da doi nguoc: "+ n1 + " " + n2)
+        document.write("Đã đổi ngược: "+ n1 + " " + n2)
 
     }
 
