--- a/ss14_ham/ss14_ham2/ham2_bt5.html
+++ b/ss14_ham/ss14_ham2/ham2_bt5.html
@@ -13,7 +13,7 @@
 
             let result = check(num1,num2,num3);
             document.write(num1 + " " + num2 + " " + num3 + "</br>")
-            document.write("So Nho Nhat La : "+ result)
+            document.write("Số nhỏ nhất là : "+ result)
 
             function check(n1,n2,n3) {
                 min = n1
