--- a/ss14_ham/ss14_ham2/ham2_bt6.html
+++ b/ss14_ham/ss14_ham2/ham2_bt6.html
@@ -7,17 +7,17 @@
 <body>
 
 <script>
-    let nhapSo = +prompt("Nhap so ")
+    let nhapSo = +prompt("Nhập số")
     flag = false;
     check(nhapSo)
     function check(n) {
 
         if(n > 0){
-            alert(" TRUE - Day la so nguyen duong ")
+            alert(" TRUE - Đây là số nguyên dương ")
         }else if (n == 0){
-            alert("Day la so 0")
+            alert("Đây là số 0")
         }else {
-            alert(" False - Day la so nguyen am")
+            alert(" False - Đây là số nguyên âm")
         }
     }
 
