Nguyen Quoc Thong nop bai tap

--- a/ss14_ham/ss14_ham2/ham2_bt9.html
+++ b/ss14_ham/ss14_ham2/ham2_bt9.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tìm kiếm trong mảng</title>
+    <title>check ki tu</title>
 </head>
 <body>
 <script>
@@ -16,7 +16,7 @@
     let key = +prompt("Nhap ki tu de check")
     let result = check(key)
     document.write(result)
-    
+
     function check(kitu) {
         flag = false;
         let count = 0;
